# ccf-app-template

./: .clang-format  .devcontainer.json  .gitignore  .gitmodules  BaseLine.ipynb  CMakeLists.txt  Dockerfile  Dockerfile.ignore  Dockerfile.virtual  FL_Clients.ipynb  Fl_Clinets.ipynb  Makefile  README.md  federated_learning_notebook.ipynb  large_payload.json  loclaggeating.py  mnistExp.ipynb  oe_sign.conf  requirements.txt  simple.ipynb  temp_model.h5  temp_model.keras  test.ipynb  test.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: ci.yml
.tours/: sample-cpp-app.tour
cmake/: version.cmake
config/: cchost_config_enclave_cpp.json  cchost_config_enclave_js.json  cchost_config_virtual_cpp.json  cchost_config_virtual_js.json
cpp/app/: app.cpp
docker/: ccf_app_cpp.enclave  ccf_app_cpp.virtual  ccf_app_js.enclave  ccf_app_js.virtual
experiments/: exp0.py  exp1.py  test.py
python/: Todo.txt  aggregation.py  attack_main.py  combine.py  combineAttack.py  config.py  data_processing.py  main.py  model_handling.py  plotting.py  server_communication.py  single.py  test.py  training.py
python/results/2024-06-30_16-33-43/: info.txt
python/results/2024-06-30_16-46-48/: info.txt
python/results/2024-06-30_16-53-06/: info.txt
python/results/2024-06-30_17-07-29/: info.txt
python/results/2024-06-30_18-12-16/: info.txt
python/results/2024-06-30_18-47-09/: info.txt
python/results/2024-07-01_15-27-01/: info.txt
python/results/2024-07-01_15-36-45/: info.txt
python/results/Jul-01-2024_03-46-01_PM/: info.txt
python/results/Jul-01-2024_03-57-41_PM/: info.txt
python/results/Jul-04-2024_07-27-50_PM/: info.txt
python/results/Jul-04-2024_07-32-57_PM/: info.txt
python/results/Jul-06-2024_02-28-00_PM/: info.txt
python/results/Jul-06-2024_03-40-50_PM/: info.txt
python/results/Jul-06-2024_09-23-56_AM/: info.txt
python/results/Jul-06-2024_09-26-47_AM/: info.txt
python/results/Jul-06-2024_09-30-35_AM/: info.txt
python/results/Jul-06-2024_09-38-51_AM/: info.txt
python/results/Jul-06-2024_12-27-26_PM/: info.txt
(+7 files in other folders)
